# NeuronScope

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  no-internal-docs.yml  publish-pypi.yml
neuronscope/: __init__.py  cli.py  mcp_server.py  schema.py
neuronscope/backends/: __init__.py  base.py  transformer_lens.py
neuronscope/core/: __init__.py  registry.py  trace.py
tests/: test_cli_smoke.py  test_mcp_server.py  test_registry.py  test_schema.py
